--- a/collisiondemo/src/App.css
+++ b/collisiondemo/src/App.css
@@ -1,5 +1,17 @@
 body {
     width: 100vw;
     height: 100vh;
-    overflow: hidden hidden;
+    overflow-x: hidden;
+} 
+
+@media (min-width : 1200px) {
+    body {
+        overflow: hidden hidden;
+    } 
+}
+
+@media (max-width : 700px) {
+    body {
+        aspect-ratio: 16/9;
+    } 
 }
