--- a/collisiondemo/src/styles/IngestionPage.css
+++ b/collisiondemo/src/styles/IngestionPage.css
@@ -643,6 +643,14 @@
     bottom : 0;
 }
 
+.CustomerInformation {
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    overflow-y: hidden;
+    bottom : 0;
+}
+
 .CustomerInformation h1, 
 .VehicleInformation h1, 
 .InsuranceInformation h1, 
@@ -674,7 +682,7 @@
     justify-content: center;
     align-items: center;
     width: 70%;
-    height: 40%;
+    height: 30%;
 }
 
 .NameField, .ContactField {
@@ -683,13 +691,13 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 20%;
-    margin-top: 10vw;
+    height: 40%;
+    margin-bottom: 10vw;
 }
 
 .NameField input, .ContactField input {
     width : 100%;
-    height : 100%;
+    height : 50%;
     color: white;
     background-color: rgb(64, 64, 64);
     border-color: rgb(255, 255, 255);
